# angstropass

./: 404.html  Cargo.toml  input-forms.html  kinds.html  literature-review.html  pass-fussion.html  print.html  searchindex.js  searchindex.json  why.html
.github/workflows/: ci.yaml  docs.yaml
angstropass-macro/: Cargo.toml
angstropass-macro/src/: input.rs  lang.rs  lib.rs  lower.rs  parse.rs
docs/: book.toml
docs/src/: SUMMARY.md  input-forms.md  kinds.md  pass-fussion.md
examples/: scheme.rs
nanopass-macro/: Cargo.toml
nanopass-macro/src/: lib.rs
src/: lib.rs
tests/it/: compiletest.rs
tests/ui/: duplicate_lang_names.rs  duplicate_lang_names.stderr  duplicate_type_names.rs  duplicate_type_names.stderr  extends_non_existant.rs  extends_non_existant.stderr  extends_several.rs  extends_several.stderr  no_parens_on_extends.rs  no_parens_on_extends.stderr  non_extends_attr.rs  non_extends_attr.stderr  non_inline_lang.rs  non_inline_lang.stderr  non_inline_module.rs  non_inline_module.stderr  non_mod_in_mod.rs  non_mod_in_mod.stderr  not_on_module.rs  not_on_module.stderr  several_extends.rs  several_extends.stderr  several_kind_attrs.rs  several_kind_attrs.stderr  with_args.rs  with_args.stderr
