[package]
name = "angstropass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angstropass-macro = { version = "0.1.0", path = "angstropass-macro" }

[dev-dependencies]
rustversion = "1.0.12"
trybuild = "1.0.80"
